syntax = "proto3";
option csharp_namespace = "ConsoleGRPCClient";
package domain;

service Users{
	rpc GetUsers (UsersRequest) returns (ListUsers);
}

message UsersRequest{
	
	int32 id=1;
}

message UsersDTO{
	int32 id=1;
	string name=2;
}
message ListUsers{
	repeated UsersDTO data=1;
}